2009-02-27  Peter Bloomfield

	* src/balsa-message.c: libbalsa_can_display is needed only if
	HAVE_GTKHTML.

2009-02-26  Paweł Sałek

	* libbalsa/imap/imap-commands.c: do not deadlock when opening imap
	mailbox with new messages, sorted on the client side.

2009-02-25  Peter Bloomfield

	make sure -DHAVE_CONFIG_H is passed as a compiler flag.
	* configure.in:
	* libbalsa/Makefile.am:
	* src/Makefile.am:

	Test HAVE_CONFIG_H before including config.h.
	* libbalsa/abook-completion.c:
	* libbalsa/address-book-extern.c:
	* libbalsa/address-book-gpe.c:
	* libbalsa/address-book-ldap.c:
	* libbalsa/address-book-ldif.c:
	* libbalsa/address-book-rubrica.c:
	* libbalsa/address-book-text.c:
	* libbalsa/address-book-vcard.c:
	* libbalsa/address-book.c:
	* libbalsa/address-view.c:
	* libbalsa/address.c:
	* libbalsa/body.c:
	* libbalsa/body.h:
	* libbalsa/cell-renderer-button.c:
	* libbalsa/files.c:
	* libbalsa/files.h:
	* libbalsa/filter-error.c:
	* libbalsa/filter-file.c:
	* libbalsa/filter-funcs.c:
	* libbalsa/filter.c:
	* libbalsa/folder-scanners.c:
	* libbalsa/folder-scanners.h:
	* libbalsa/gmime-gpgme-context.c:
	* libbalsa/gmime-part-rfc2440.c:
	* libbalsa/gmime-stream-gio.c:
	* libbalsa/gmime-stream-gio.h:
	* libbalsa/gmime-stream-gnome-vfs.c:
	* libbalsa/gmime-stream-gnome-vfs.h:
	* libbalsa/html.c:
	* libbalsa/html.h:
	* libbalsa/identity.c:
	* libbalsa/identity.h:
	* libbalsa/imap-server.c:
	* libbalsa/imap-server.h:
	* libbalsa/information.c:
	* libbalsa/libbalsa-conf.h:
	* libbalsa/libbalsa-vfs.c:
	* libbalsa/libbalsa-vfs.h:
	* libbalsa/libbalsa.c:
	* libbalsa/libbalsa.h:
	* libbalsa/mailbox-filter.c:
	* libbalsa/mailbox.c:
	* libbalsa/mailbox.h:
	* libbalsa/mailbox_imap.c:
	* libbalsa/mailbox_local.c:
	* libbalsa/mailbox_local.h:
	* libbalsa/mailbox_maildir.c:
	* libbalsa/mailbox_mbox.c:
	* libbalsa/mailbox_mh.c:
	* libbalsa/mailbox_pop3.c:
	* libbalsa/mailbox_remote.c:
	* libbalsa/message.c:
	* libbalsa/message.h:
	* libbalsa/mime-stream-shared.c: